# agent-functions

./: .gitignore  CLAUDE.md  DECORATORS_PLAN.md  GEMINI.md  PLAN.md  README.md  main.py  pyproject.toml
.beads/: issues.jsonl
agents/: __init__.py  agentic_orchestrator.py  classical_agent.py  llm_client.py  mellea_classical_agent.py  orchestrator.py  quantum_agent.py
agents/tools/: __init__.py  circuit_analysis.py  data_loader.py  parameter_recommendation.py  stage_evaluation.py
config/: __init__.py  settings.py
docs/: MELLEA_INTEGRATION.md
executors/: __init__.py  qiskit_executor.py  ray_executor.py
patterns/: __init__.py  decorators.py  loader.py
patterns/chsh/: __init__.py  execute.py  map.py  optimize.py  pattern.py  post_process.py
scripts/: compare_mellea_execution.py
tests/: conftest.py
tests/mellea/: test_mellea_integration.py
tests/patterns/: test_decorators.py  test_pattern_context.py  test_pattern_loader.py
utils/: __init__.py  logging.py  metrics.py
workflows/: pattern_graph.py
