[project]
name = "agent-functions"
version = "0.1.0"
description = "Multi-agent system for orchestrating quantum and classical workloads using LangGraph"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "qiskit>=1.0.0",
    "qiskit-aer>=0.14.0",
    "ray>=2.9.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "config", "executors", "patterns", "workflows", "utils"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
